--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,7 +14,7 @@
         android:text="Desenvolvedores:"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="200dp"/>
 
     <Button
@@ -34,12 +34,12 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_ederson"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_background"
         android:text="Igor"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        android:background="@drawable/btn_background"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
