--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,10 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:textColor">@color/red</item>
-        <item name="background">@android:color/transparent</item>
         <item name="android:textSize">40sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:onClick">clicaTabuleiro</item>
     </style>
 
     <style name="linhaVertical">
@@ -27,6 +27,12 @@
         <item name="background">@color/red</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">5dp</item>
+    </style>
+
+    <style name="roundimageview" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20dp</item>
+        <item name="color">@color/white</item>
     </style>
 
 
