--- a/app/src/main/res/layout/activity_jogadores.xml
+++ b/app/src/main/res/layout/activity_jogadores.xml
@@ -10,19 +10,19 @@
         android:id="@+id/tv_nome_jg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="150sp"
         android:gravity="center"
         android:text="Informe o nome dos jogadores:"
+        android:textColor="?android:textColorPrimary"
         android:textSize="30sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/et_jg1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/tv_nome_jg"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:hint="Jogador 1"
         android:paddingLeft="10dp"
         android:background="@drawable/et_background"
