--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -122,11 +122,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="520sp"
+        android:layout_marginTop="592dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Vez do O"
+        android:text="Vez do Jogador 2 (O)"
         android:textColor="#A4243B"
         android:textSize="30sp"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
